<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_text_name_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_name"
        android:padding="3dp"
        android:background="@drawable/edit_text_subject"
        android:layout_margin="10dp" />

    <Spinner
        android:id="@+id/group_members_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_name_group"
        android:layout_margin="10dp"></Spinner>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/edit_group_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            style="@style/yellow_button"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/edit_group_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/green_button"
            android:text="@string/save"/>

    </LinearLayout>

</RelativeLayout>