<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="11">

            <EditText
                android:id="@+id/edit_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_subject"
                android:layout_marginRight="5dp"
                android:padding="3dp"
                android:textSize="12sp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edit_name_subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_subject"
                android:padding="3dp"
                android:layout_marginRight="5dp"
                android:textSize="12sp"
                android:layout_weight="3" />

            <EditText
                android:id="@+id/edit_cabinet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:background="@drawable/edit_text_subject"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_weight="1" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/delete_subject"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/delete_button"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radio_over_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_over_line"/>

        <RadioButton
            android:id="@+id/radio_under_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_under_line"/>

        <RadioButton
            android:id="@+id/radio_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_none"
            android:checked="true"/>

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_between_edits_login"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"></LinearLayout>

</LinearLayout>